# Ganesha-Spyware

./: .gitignore  README.md  README_ID.md  WindowsMonitoringExample.cpp  advanced_encoder.py  agent-ds.py  agent.py  agent_improved.py  automated_setup.py  bot.txt  build_comparison.py  dns_tunnel_setup.py  dropper_installer.py  eye2.py  installer_gui.py  legitimate_c2_setup.py  loader.c  requirements.txt.txt  setup_build_tools.py  test_improvements.py  ultimate_encoder.py
drop/: installer.ahk  installer.nim  installer.rc
drop/dropper/: Cargo.toml  build.rs
drop/dropper/src/: main.rs
replit/: main.py
templates/: index.html
