[package]
name = "dropper"
version = "1.0.0"
edition = "2021"
authors = ["scupidc0des"]

# Konfigurasi dependensi utama
[dependencies]
native-windows-gui = "1.0.13"   # Untuk membuat GUI native di Windows
native-windows-derive = "1.0.5" # Helper untuk GUI
reqwest = { version = "0.11", features = ["blocking"] } # Untuk mengunduh file

# Konfigurasi dependensi khusus untuk build di Windows
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }

# (SANGAT PENTING) Konfigurasi untuk build resource (ikon)
[build-dependencies]
winres = "0.1"

# (SANGAT PENTING) Profil rilis untuk optimasi ukuran file
[profile.release]
panic = "abort"      # Keluar langsung saat panic, mengurangi ukuran
opt-level = "z"      # Optimalkan untuk ukuran sekecil mungkin ("z" for size)
lto = true           # Aktifkan Link-Time Optimization
codegen-units = 1    # Maksimalkan optimasi dengan satu unit kompilasi
strip = true         # Hapus simbol debug dari biner final
